--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .create-story {
+    @apply 
+      absolute bottom-0 right-1 bg-blue-500 h-6 w-6 rounded-full text-white text-xl font-semibold border-2 border-white flex justify-center items-center font-mono hover:bg-blue-700;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
